--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
   <string name="label_company">company:</string>
   <string name="label_email">email:</string>
   <string name="label_type">type:</string>
+  <string name="empty_state_format">No members found for %1$s.</string>
 </resources>
